--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
     "require": {
         "php": "^8.0",
         "illuminate/contracts": "^8.37",
-        "spatie/laravel-package-tools": "^1.4.3"
+        "spatie/laravel-package-tools": "^1.4.3",
+        "guzzlehttp/guzzle": "^7.4"
     },
     "require-dev": {
-        "guzzlehttp/guzzle": "^7.4",
         "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
