add composer tag

--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,19 @@
     "name": "oravil/laravel-guard",
     "description": "laravel geo location, ip services, proxy and vpn detected",
     "keywords": [
+        "laravel",
         "geo",
         "vpn",
         "proxy",
         "tor",
-        "laravel",
-        "laravel-guard",
-        "laravel geo",
-        "laravel proxy",
-        "laravel vpn",
-        "laravel location",
-        "laravel security",
-        "laravel tor"
+        "guard",
+        "location",
+        "security",
+        "MaxMind",
+        "IP API",
+        "infoDB",
+        "ip registry",
+        "ip info"
     ],
     "homepage": "https://github.com/oravil/laravel-guard",
     "license": "MIT",
