--- a/composer.json
+++ b/composer.json
@@ -27,11 +27,12 @@
     ],
     "require": {
         "php": "^8.0",
+        "guzzlehttp/guzzle": "^7.4",
         "illuminate/contracts": "^8.37",
-        "spatie/laravel-package-tools": "^1.4.3",
-        "guzzlehttp/guzzle": "^7.4"
+        "spatie/laravel-package-tools": "^1.4.3"
     },
     "require-dev": {
+        "predis/predis": "^1.1",
         "nunomaduro/collision": "^5.3",
         "orchestra/testbench": "^6.15",
         "pestphp/pest": "^1.18",
